# fasta-parsing-playground

./: Cargo.toml  README.md
src/: main.rs
